[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Characters/enemy2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Characters/CloakingEnemy.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Weapons/Pistol.tscn" type="PackedScene" id=3]
[ext_resource path="res://Shaders/circular-progress.shader" type="Shader" id=4]
[ext_resource path="res://Materials/Cloaking.tres" type="Material" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 32.1115

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 4 )
shader_param/value = 50.0
shader_param/thickness = 30.0
shader_param/offset = null
shader_param/smoothing = 5.0

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemy",
]]
position = Vector2( 160, 160 )
rotation = 1.5708
z_index = -50
collision_layer = 9
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 5 )
rotation = -1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true

[node name="Controls" type="Node2D" parent="."]
rotation = -1.5708
z_as_relative = false

[node name="HealthBG" type="Panel" parent="Controls"]
margin_left = -32.0002
margin_top = -47.9999
margin_right = 31.9998
margin_bottom = -39.9999
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthFG" type="Panel" parent="Controls"]
margin_left = -32.0002
margin_top = -48.0
margin_right = 31.9998
margin_bottom = -40.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="Panel" parent="Controls"]
visible = false
material = SubResource( 4 )
margin_left = 15.9998
margin_top = -104.0
margin_right = 47.9998
margin_bottom = -72.0001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" parent="." instance=ExtResource( 3 )]
material = ExtResource( 5 )
[connection signal="tree_exiting" from="." to="." method="_on_Enemy_tree_exiting"]
